# PathOfBuilding-PoE2-MacOS

./: .busted  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  RELEASE.md  SECURITY.md  changelog.txt  help.txt  manifest.cfg  manifest.xml  update_manifest.py
.github/: CODEOWNERS  tweak_changelogs.sh
.github/ISSUE_TEMPLATE/: accuracy_bug_report.yaml  application_bug_report.yaml  behaviour_bug_report.yaml  calculation_bug_report.yaml  crash_report.yaml  feature_request.yaml
.github/workflows/: backport.yml  backport_receive.yml  beta.yml  installer.yml  macos-release.yml  macos.yml  release.yml  require-label.yml  test.yml
docs/: addingMods.md  macos.md  modSyntax.md  rundown.md
macos/: AppIcon.icns  CMakeLists.txt  Info.plist.in
macos/src/: DdsDecode.hpp  DdsDecode.mm  FontRenderer.hpp  FontRenderer.mm  Host.hpp  Host.mm  SubScript.hpp  SubScript.mm  TgaImage.hpp  TgaImage.mm  bcdec.h  main.mm
runtime/lua/: dkjson.lua  socket.lua
spec/System/: TestAilments_spec.lua  TestAttacks_spec.lua  TestConfigTab_spec.lua  TestDefence_spec.lua  TestImportTab_spec.lua  TestItemMods_spec.lua  TestItemParse_spec.lua  TestItemParse_spec.lua.rej  TestItemTools_spec.lua  TestItemsTab_spec.lua  TestLoadouts_spec.lua  TestPartyTab_spec.lua  TestPassiveSpec_spec.lua  TestPoEAPIAuth_spec.lua  TestSkillsTab_spec.lua  TestSkills_spec.lua  TestSocketables_spec.lua  TestStatDescriber_spec.lua  TestTradeQueryCurrency_spec.lua  TestTradeQueryGenerator_spec.lua  TestTradeQueryRequests_spec.lua  TestTreeTab_spec.lua
src/: GameVersions.lua  HeadlessWrapper.lua  Launch.lua  LaunchServer.lua
src/Assets/: monster-categories_36_36_BC7.dds.zst
src/Classes/: BuildSetListControl.lua  BuildSetService.lua  CalcsTab.lua  (+40 more)
tests/: test_update_manifest.py
(+769 files in other folders)
